--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ billiard==3.3.0.13
 boto==2.25.0
 celery==3.1.7
 django-celery==3.1.1
+django-stronghold==0.2.4
 ipaddr==2.1.7
 kombu==3.0.9
 psycopg2==2.5.2
