admin side static content to nginx conf example

--- a/extras/nginx/vmmtest.conf
+++ b/extras/nginx/vmmtest.conf
@@ -24,6 +24,10 @@ server {
         alias /home/vmm/vmm_test/futurice_vimma2/vmm/static; # your Django project's static files - amend as required
     }
 
+    location /static/admin {
+        alias /home/vmm/.virtualenvs/vmmtest/lib/python2.7/site-packages/django/contrib/admin/static/admin/; # is this the way to go, seems dodgy?
+    }
+
     # Finally, send all non-media requests to the Django server.
     location / {
         uwsgi_pass  django;
