--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ __pycache__/
 vimmasite/vimma/migrations/0*.py
 
 /vimma.log*
+
+# celery puts its logs here, with the instructions in the README
+/vimmasite/vimma.log*
+/vimmasite/celerybeat.pid
+/vimmasite/celerybeat-schedule
