--- a/scripts/secrets.py.template
+++ b/scripts/secrets.py.template
@@ -1,1 +1,7 @@
+AWS_ACCESS_KEY_ID=""
+AWS_ACCESS_KEY_SECRET=""
+AWS_SSH_KEY_NAME=""
+AWS_ROUTE_53_NAME=""
+
+# Used to get Futurice users
 FUM_API_TOKEN=''
