--- a/vimmasite/vimma/static/vimma/components/bower.json
+++ b/vimmasite/vimma/static/vimma/components/bower.json
@@ -4,6 +4,9 @@
   "dependencies": {
     "polymer": "Polymer/polymer",
     "core-elements": "Polymer/core-elements",
-    "paper-elements": "Polymer/paper-elements"
+    "paper-elements": "Polymer/paper-elements",
+    "jquery": "",
+    "jquery.cookie": "",
+    "bootstrap": ""
   }
 }
