show Power Log charts in the UI

--- a/vimmasite/vimma/static/vimma/components/bower.json
+++ b/vimmasite/vimma/static/vimma/components/bower.json
@@ -7,6 +7,7 @@
     "paper-elements": "Polymer/paper-elements",
     "jquery": "",
     "jquery.cookie": "",
-    "bootstrap": ""
+    "bootstrap": "",
+    "highcharts": ""
   }
 }
