--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "vimma2",
     "version": "0.0.0",
     "dependencies": {
-        "bower": ""
+        "bower": "",
+        "web-component-tester": ""
     }
 }
