--- a/vimmasite/vimma/static/vimma/components/bower.json
+++ b/vimmasite/vimma/static/vimma/components/bower.json
@@ -5,6 +5,7 @@
     "polymer": "Polymer/polymer#^0.5",
     "core-elements": "Polymer/core-elements#^0.5",
     "paper-elements": "Polymer/paper-elements#^0.5",
+    "web-component-tester": "",
     "jquery": "",
     "jquery.cookie": "",
     "bootstrap": "",
