--- a/vimmasite/vimma/static/vimma/components/bower.json
+++ b/vimmasite/vimma/static/vimma/components/bower.json
@@ -2,9 +2,9 @@
   "name": "vimma",
   "private": true,
   "dependencies": {
-    "polymer": "Polymer/polymer#^0.5",
-    "core-elements": "Polymer/core-elements#^0.5",
-    "paper-elements": "Polymer/paper-elements#^0.5",
+    "polymer": "Polymer/polymer#0.5.5",
+    "core-elements": "Polymer/core-elements#0.5.5",
+    "paper-elements": "Polymer/paper-elements#0.5.5",
     "web-component-tester": "",
     "jquery": "",
     "jquery.cookie": "",
