AWS: use an explicit VPC and choose a random subnet when creating VMs

--- a/config/dev_secrets.py.example
+++ b/config/dev_secrets.py.example
@@ -1,5 +1,9 @@
+# These are only used in development to populate the database with initial data
+
 AWS_ACCESS_KEY_ID=""
 AWS_ACCESS_KEY_SECRET=""
 AWS_SSH_KEY_NAME=""
 AWS_ROUTE_53_NAME=""
 AWS_DEFAULT_SECURITY_GROUP_ID=""
+AWS_VPC_ID=""
+AWS_AMI_ID=""
