--- a/vimmasite/vimma/static/vimma/components/bower.json
+++ b/vimmasite/vimma/static/vimma/components/bower.json
@@ -6,6 +6,7 @@
     "web-component-tester": "",
     "jquery": "",
     "jquery.cookie": "",
+    "qunit": "",
     "bootstrap": "",
     "highcharts": ""
   }
