homepage tabs and fragment navigation

--- a/vimmasite/vimma/static/vimma/components/bower.json
+++ b/vimmasite/vimma/static/vimma/components/bower.json
@@ -3,6 +3,8 @@
   "private": true,
   "dependencies": {
     "polymer": "Polymer/polymer#^1.0.0",
+    "iron-elements": "PolymerElements/iron-elements#^1.0.0",
+    "paper-elements": "PolymerElements/paper-elements#^1.0.0",
     "web-component-tester": "",
     "jquery": "",
     "jquery.cookie": "",
