--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vimma2",
     "version": "0.0.0",
     "dependencies": {
-        "bower": "",
-        "web-component-tester": ""
+        "bower": "1.4.1",
+        "web-component-tester": "3.2.0"
     }
 }
