--- a/vimmasite/vimma/static/vimma/components/bower.json
+++ b/vimmasite/vimma/static/vimma/components/bower.json
@@ -5,11 +5,11 @@
     "polymer": "Polymer/polymer#^1.0.0",
     "iron-elements": "PolymerElements/iron-elements#^1.0.0",
     "paper-elements": "PolymerElements/paper-elements#^1.0.0",
-    "web-component-tester": "",
-    "jquery": "",
-    "jquery.cookie": "",
-    "qunit": "",
-    "bootstrap": "",
-    "highcharts": ""
+    "web-component-tester": "3.2.0",
+    "jquery": "2.1.4",
+    "jquery.cookie": "1.4.1",
+    "qunit": "1.18.0",
+    "bootstrap": "3.3.5",
+    "highcharts": "4.1.7"
   }
 }
