Add support for trusted networks
Firewall rules for trusted networks are non-special, regardless of network size.

--- a/config/local_settings.py.example
+++ b/config/local_settings.py.example
@@ -27,3 +27,8 @@ POSTGRESQL_DB = {
 DATABASES = {
     'default': POSTGRESQL_DB,
 }
+
+# Networks defined as non-special. Firewall rules for these networks will not be flagged as special.
+# Example: 
+# TRUSTED_NETWORKS = ['10.0.0.0/8', '192.168.0.0/16', '172.16.0.0/12']
+TRUSTED_NETWORKS = []
