--- a/vimmasite/vimma/static/vimma/components/bower.json
+++ b/vimmasite/vimma/static/vimma/components/bower.json
@@ -2,10 +2,10 @@
   "name": "vimma",
   "private": true,
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.0.0",
-    "iron-elements": "PolymerElements/iron-elements#^1.0.0",
-    "paper-elements": "PolymerElements/paper-elements#^1.0.0",
-    "web-component-tester": "3.2.0",
+    "polymer": "Polymer/polymer#1.0",
+    "iron-elements": "PolymerElements/iron-elements#1.0",
+    "paper-elements": "PolymerElements/paper-elements#1.0",
+    "web-component-tester": "3.3",
     "jquery": "2.1.4",
     "jquery.cookie": "1.4.1",
     "qunit": "1.18.0",
