--- a/docker/dev/supervisord.conf
+++ b/docker/dev/supervisord.conf
@@ -8,7 +8,7 @@ command=/usr/sbin/nginx -c /etc/nginx/nginx.conf
 command=/usr/bin/redis-server
 
 [program:vimma]
-command=/usr/local/bin/uwsgi -s 127.0.0.1:3031 -p 2 --idle 60 --py-autoreload 1 --wsgi-file vimmasite/wsgi.py
+command=/usr/local/bin/uwsgi -s 127.0.0.1:3031 -p 1 --idle 60 --py-autoreload 1 --disable-sendfile --wsgi-file vimmasite/wsgi.py
 user=app
 directory=/opt/app/
 stdout_logfile=/dev/stdout
