--- a/docker/dev/Dockerfile
+++ b/docker/dev/Dockerfile
@@ -18,7 +18,7 @@ RUN apt-get update && apt-get install -y \
 
 # Development dependencies
 RUN apt-get update && apt-get install -y \
-    default-jre xvfb chromium-browser firefox
+    default-jre xvfb firefox
 # Install Google Chrome: web-component-tester doesn't detect Chromium
 RUN wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | apt-key add -
 RUN echo "deb http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google.list
