--- a/docker/dev/requirements.txt
+++ b/docker/dev/requirements.txt
@@ -1,6 +1,7 @@
-django==1.8.3
+#django==1.8.3
+git+https://github.com/django/django/#egg=django
 psycopg2==2.6.1
-djangorestframework==3.1.3
+djangorestframework==3.2.3
 markdown==2.6.2
 django-filter==0.10.0
 pytz==2015.4
