before_install -> script

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,13 @@ branches:
   only:
     - master
 
-script:
+before_install:
   - docker run --name postgres -e POSTGRES_PASSWORD=mysecretpassword -d postgres
-  - docker build -t test -f docker/dev/Dockerfile . && docker run --name vimma -e DB_USER=postgres -e DB_HOST=postgres -e DB_PASSWORD=mysecretpassword --link postgres:postgres test && xvfb-run python manage.py test vimma --noinput && xvfb-run node_modules/.bin/wct vimma/static/vimma/components/test/
+  - docker build -t test -f docker/dev/Dockerfile .
+  - docker run --name vimma -e DB_USER=postgres -e DB_HOST=postgres -e DB_PASSWORD=mysecretpassword --link postgres:postgres test
+
+script:
+  - xvfb-run python manage.py test vimma --noinput
+  - xvfb-run node_modules/.bin/wct vimma/static/vimma/components/test/
 
 
