before_install -> script

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,15 @@ sudo: required
 services:
   - docker
 
-script:
-  - docker run --name postgres -e POSTGRES_PASSWORD=mysecretpassword -d postgres
-  - docker build -t test -f docker/dev/Dockerfile . && docker run --name vimma -e DB_USER=postgres -e DB_HOST=postgres -e DB_PASSWORD=mysecretpassword --link postgres:postgres test && xvfb-run python manage.py test vimma --noinput && xvfb-run node_modules/.bin/wct vimma/static/vimma/components/test/
-
 branches:
   only:
     - master
 
+before_install:
+  - docker run --name postgres -e POSTGRES_PASSWORD=mysecretpassword -d postgres
+  - docker build -t test -f docker/dev/Dockerfile .
+  - docker run --name vimma -e DB_USER=postgres -e DB_HOST=postgres -e DB_PASSWORD=mysecretpassword --link postgres:postgres test
+
+script:
+  - xvfb-run python manage.py test vimma --noinput
+  - xvfb-run node_modules/.bin/wct vimma/static/vimma/components/test/
