--- a/docker/dev/requirements.txt
+++ b/docker/dev/requirements.txt
@@ -8,6 +8,7 @@ pytz==2015.4
 celery==3.1.18
 boto==2.38.0
 uwsgi==2.0.11.1
-django_extensions==1.5.5
+django_extensions==1.5.6
 redis==2.10.3
 selenium==2.46.0
+git+https://github.com/philipaxer/pygraphviz.git#egg=pygraphviz
