--- a/docker/dev/requirements.txt
+++ b/docker/dev/requirements.txt
@@ -12,3 +12,5 @@ django_extensions==1.5.6
 redis==2.10.3
 selenium==2.47.1
 git+https://github.com/philipaxer/pygraphviz.git#egg=pygraphviz
+
+django-js-utils-nextgen==0.8.0
